spec/tests/error/error-2.1.tcl
# Test: error caught by catch
set result [catch {error "test error"} msg]
puts "result: $result"
puts "msg: $msg"
